--- a/src/app/widgets/components/entity/entities.graph.widget.component.scss
+++ b/src/app/widgets/components/entity/entities.graph.widget.component.scss
@@ -1,11 +1,17 @@
-:host {
+.tb-entities-graph {
   width: 100%;
   height: 100%;
 
-  #graph-container {
+  .tb-entities-graph-container {
     height: 100%;
     // Default background color for graph, if not set from widget settings
     background-color: rgb(167, 193, 222);
+
+    .scene-container {
+      .clickable {
+        cursor: inherit;
+      }
+    }
   }
 }
 
