Add devices to asset nodes, change thingsboard types package to community edition for correct imports of services

--- a/src/app/widgets/components/entity/entities.graph.widget.component.scss
+++ b/src/app/widgets/components/entity/entities.graph.widget.component.scss
@@ -11,6 +11,12 @@
       .clickable {
         cursor: inherit;
       }
+
+      .lil-gui.root {
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
     }
   }
 }
