Authoring and licensing

--- a/src/app/widgets/components/entity/entities.graph.widget.component.html
+++ b/src/app/widgets/components/entity/entities.graph.widget.component.html
@@ -1,3 +1,8 @@
+<!--
+
+    Copyright © 2024 Rut Bastoni rut.bastoni@gmail.com
+
+-->
 <div class="tb-entities-graph tb-absolute-fill" tb-toast toastTarget="{{ toastTargetId }}">
   <div fxFlex fxLayout="column" class="tb-absolute-fill">
         <span [fxShow]="dataLoading" fxLayoutAlign="center center" class="no-data-found">{{ 'common.loading' | translate }}</span>
